--- a/section-3-1.org
+++ b/section-3-1.org
@@ -235,3 +235,32 @@ You will find it useful to have a procedure that returns a number chosen at rand
                      (make-circle-test x y r))
   0.1)
 #+end_src
+
+* Exercise 3.6
+It is useful to be able to reset a random-number generator to produce a sequence starting from a given value. Design a new rand procedure that is called with an argument that is either the symbol generate or the symbol reset and behaves as follows: (rand 'generate) produces a new random number; ((rand 'reset) ⟨new-value⟩) resets the internal state variable to the designated ⟨new-value⟩.  Thus, by resetting the state, one can generate repeatable sequences.  These are very handy to have when testing and debugging programs that use random numbers.
+
+** Solution
+#+begin_src scheme
+;; realy bad, lazy as hell, RNG
+(define random-init 71)
+(define (rand-update x)
+  (* 37 x))
+
+(define rand
+  (let ((x random-init))
+    (lambda (action)
+      (cond ((eq? 'generate action)
+             (begin
+               (set! x (rand-update x))
+               x))
+        ((eq? 'reset action)
+         (lambda (new-value)
+           (set! x new-value)))
+        (else (error "Invalid action for rand" action))))))
+
+(define a (rand 'generate))
+
+(test-assert (not (= a (rand 'generate))))
+((rand 'reset) 71)
+(test-assert (= a (rand 'generate)))
+#+end_src
