--- a/section-3-1.org
+++ b/section-3-1.org
@@ -87,7 +87,8 @@ The resulting account object should process a request only if it is accompanied 
                balance)
         "Insuffucient balance"))
   (define (deposit value)
-    (set! balance (+ balance value)))
+    (set! balance (+ balance value))
+    balance)
   (define (dispatch password operation)
     (if (eq? account-password password)
         (cond ((eq? operation 'withdraw) withdraw)
@@ -140,7 +141,8 @@ Modify the make-account procedure of Exercise 3.3 by adding another local state 
         "Insuffucient balance"))
 
   (define (deposit value)
-    (set! balance (+ balance value)))
+    (set! balance (+ balance value))
+    balance)
 
   (define check-password
     (let ((consecutive-mistakes 0))
@@ -263,4 +265,107 @@ It is useful to be able to reset a random-number generator to produce a sequence
 (test-assert (not (= a (rand 'generate))))
 ((rand 'reset) 71)
 (test-assert (= a (rand 'generate)))
+#+end_src
+
+* Exercise 3.7
+Consider the bank account objects created by make-account, with the password modification described in Exercise 3.3.  Suppose that our banking system requires the ability to make joint accounts.  Define a procedure make-joint that accomplishes this.  Make-joint should take three arguments.  The first is a password-protected account.  The second argument must match the password with which the account was defined in order for the make-joint operation to proceed.  The third argument is a new password.  Make-joint is to create an additional access to the original account using the new password.  For example, if peter-acc is a bank account with password open-sesame, then
+
+#+begin_src :eval never
+(define paul-acc
+  (make-joint peter-acc
+              'open-sesame
+              'rosebud))
+#+end_src
+
+will allow one to make transactions on peter-acc using the name paul-acc and the password rosebud.  You may wish to modify your solution to Exercise 3.3 to accommodate this new feature.
+
+** Solution
+#+begin_src scheme
+(define (with-correct-pass expected-pass actual-pass procedure)
+  (if (eq? expected-pass actual-pass)
+      (procedure)
+      (lambda (_) "Incorrect password")))
+
+;; other than extracting the password checking procedure,
+;; make-account is unchanged
+(define (make-account balance account-password)
+  (define (withdraw value)
+    (if (> balance value)
+        (begin (set! balance (- balance value))
+               balance)
+        "Insuffucient balance"))
+  (define (deposit value)
+    (set! balance (+ balance value))
+    balance)
+  (define (dispatch password operation)
+    (with-correct-pass account-password password
+                       (lambda ()
+                         (cond ((eq? operation 'withdraw) withdraw)
+                               ((eq? operation 'deposit) deposit)
+                               (else
+                                (error "Unknown request: MAKE-ACCOUNT"
+                                       operation))))))
+  dispatch)
+
+(define (make-joint acc acc-pass new-pass)
+  (define (withdraw value)
+    ((acc acc-pass 'withdraw) value))
+  (define (deposit value)
+    ((acc acc-pass 'deposit) value))
+  (define (dispatch password operation)
+    (with-correct-pass new-pass password
+                       (lambda ()
+                         (cond ((eq? operation 'withdraw) withdraw)
+                               ((eq? operation 'deposit) deposit)
+                               (else (error "Unknown request: MAKE-JOINT"
+                                            operation))))))
+  dispatch)
+
+
+(define peter-pass 'open-sesame)
+(define peter-acc
+  (make-account 100 peter-pass))
+
+(define paul-pass 'rosebuse)
+(define paul-acc
+  (make-joint peter-acc
+              peter-pass
+              paul-pass))
+
+(test-equal 90 ((paul-acc paul-pass 'withdraw) 10))
+(test-equal 80 ((peter-acc peter-pass 'withdraw) 10))
+(test-equal 90 ((peter-acc peter-pass 'deposit) 10))
+(test-equal 100 ((paul-acc paul-pass 'deposit) 10))
+
+(test-equal "Incorrect password" ((paul-acc peter-pass 'deposit) 10))
+(test-equal "Incorrect password" ((peter-acc paul-pass 'withdraw) 10))
+#+end_src
+
+
+* Exercise 3.8
+When we defined the evaluation model in 1.1.3, we said that the first step in evaluating an expression is to evaluate its subexpressions.  But we never specified the order in which the subexpressions should be evaluated (e.g., left to right or right to left).  When we introduce assignment, the order in which the arguments to a procedure are evaluated can make a difference to the result.  Define a simple procedure f such that evaluating
+
+#+begin_src scheme :eval never
+(+ (f 0) (f 1))
+#+end_src
+
+will return 0 if the arguments to + are evaluated from left to right but will return 1 if the arguments are evaluated from right to left.
+
+** Solution
+#+begin_src scheme
+(define f (let ((prev 0))
+            (lambda (x)
+              (let ((result prev))
+                (set! prev x)
+                result))))
+
+;; simulate right to left evaluation
+(define first (f 1))
+(define second (f 0))
+(test-equal 1 (+ second first))
+
+;; this test is intertwined with the previous one, since it depends
+;; on the fact that the second evaluation (f 0) has reseted the internal
+;; prev to 0
+(test-equal 0 (+ (f 0) (f 1)))
 #+end_src
