--- a/section-3-3.org
+++ b/section-3-3.org
@@ -126,3 +126,89 @@ mystery returns a list in the reversed order while changing the original list wh
 
 *** Box-and-pointer diagram after (define w (mystery v))
 [[file:annex/3_14-boxes-2.png]]
+
+* Exercise 3.15
+Draw box-and-pointer diagrams to explain the effect of set-to-wow! on the structures z1 and z2 above.
+
+** Solution
+[[file:annex/3_15-boxes-1.png]]
+
+[[file:annex/3_15-boxes-2.png]]
+
+* Exercise 3.16
+Ben Bitdiddle decides to write a procedure to count the number of pairs in any list structure.  “It’s easy,” he reasons.  “The number of pairs in any structure is the number in the car plus the number in the cdr plus one more to count the current pair.”  So Ben writes the following procedure:
+
+#+begin_src scheme :eval never
+(define (count-pairs x)
+  (if (not (pair? x))
+      0
+      (+ (count-pairs (car x))
+         (count-pairs (cdr x))
+         1)))
+#+end_src
+
+Show that this procedure is not correct.  In particular, draw box-and-pointer diagrams representing list structures made up of exactly three pairs for which Ben’s procedure would return 3; return 4; return 7; never return at all.
+
+** Solution
+*** Returns 3
+[[file:annex/3_16-boxes-1.png]]
+
+*** Returns 4
+[[file:annex/3_16-boxes-2.png]]
+
+*** Returns 7
+[[file:annex/3_16-boxes-3.png]]
+
+*** Never returns
+[[file:annex/3_16-boxes-4.png]]
+
+* Exercise 3.17
+Devise a correct version of the count-pairs procedure of Exercise 3.16 that returns the number of distinct pairs in any structure.  (Hint: Traverse the structure, maintaining an auxiliary data structure that is used to keep track of which pairs have already been counted.)
+
+** Solution
+#+begin_src scheme
+;; set operations
+(define (element-of-set? x set)
+  (cond ((null? set) false)
+        ((eq? x (car set)) true)
+        (else (element-of-set? x (cdr set)))))
+
+(define (adjoin-set x set)
+  (cons x set))
+
+(define (count-pairs x)
+  ((let ((set-of-pairs '()))
+     (define (count-pairs-helper x)
+       (if (or (not (pair? x))
+               (element-of-set? x set-of-pairs))
+           0
+           (begin (set! set-of-pairs (adjoin-set x set-of-pairs))
+                  (+ (count-pairs-helper (car x))
+                     (count-pairs-helper (cdr x))
+                     1))))
+     count-pairs-helper)
+   x))
+
+(define a-list '(a))
+
+(test-equal 3 (count-pairs '(a b c)))
+
+;; would return 4 in the previous exercise
+(test-equal 3 (count-pairs (cons (cons a-list a-list) '())))
+
+;; would return 7 in the previous exercise
+(test-equal 3 (count-pairs (let ((temp (cons a-list a-list)))
+                             (cons temp temp))))
+
+(define (last-pair x)
+  (if (null? (cdr x))
+      x
+      (last-pair (cdr x))))
+
+(define (make-cycle x)
+  (set-cdr! (last-pair x) x)
+  x)
+
+;; would never return
+(test-equal 3 (count-pairs (make-cycle '(a b c))))
+#+end_src
