--- a/section-3-3.org
+++ b/section-3-3.org
@@ -568,3 +568,164 @@ A deque (“double-ended queue”) is a sequence in which items can be inserted 
 (rear-delete-deque! q)
 (test-assert (empty-deque? q))
 #+end_src
+
+* Exercise 3.24
+In the table implementations above, the keys are tested for equality using equal? (called by assoc).  This is not always the appropriate test.  For instance, we might have a table with numeric keys in which we don’t need an exact match to the number we’re looking up, but only a number within some tolerance of it. Design a table constructor make-table that takes as an argument a same-key? procedure that will be used to test “equality” of keys. Make-table should return a dispatch procedure that can be used to access appropriate lookup and insert! procedures for a local table.
+
+** Solution
+#+begin_src scheme
+(define (make-table same-key?)
+  (let ((local-table (list '*table*)))
+    (define (assoc key records)
+      (cond ((null? records) false)
+            ((same-key? key (caar records))
+             (car records))
+            (else (assoc key (cdr records)))))
+    (define (lookup key)
+      (let ((record (assoc key (cdr local-table))))
+        (if record
+            (cdr record)
+            false)))
+    (define (insert! key value)
+      (let ((record (assoc key (cdr local-table))))
+        (if record
+            (set-cdr! record value)
+            (set-cdr! local-table
+                      (cons (cons key value)
+                            (cdr local-table)))))
+      'ok)
+    (define (dispatch m)
+      (cond ((eq? m 'lookup-proc) lookup)
+            ((eq? m 'insert-proc!) insert!)
+            (else (error "Unknown operation:
+                          TABLE" m))))
+    dispatch))
+
+(define (lookup key table)
+  ((table 'lookup-proc) key))
+
+(define (insert! key value table)
+  ((table 'insert-proc!) key value))
+
+;; tests
+(define tbl (make-table eq?))
+(test-equal 'ok (insert! 'key 10 tbl))
+(test-equal 10 (lookup 'key tbl))
+#+end_src
+
+* Exercise 3.25
+Generalizing one- and two-dimensional tables, show how to implement a table in which values are stored under an arbitrary number of keys and different values may be stored under different numbers of keys.  The lookup and insert! procedures should take as input a list of keys used to access the table.
+
+** Solution
+#+begin_src scheme
+(define (assoc key records)
+  (cond ((null? records) #f)
+        ((equal? key (caar records))
+         (car records))
+        (else (assoc key (cdr records)))))
+
+(define (lookup key table)
+  (let ((record (assoc key (cdr table))))
+    (if record
+        (cdr record)
+        #f)))
+
+(define (insert! key value table)
+  (let ((record (assoc key (cdr table))))
+    (if record
+        (set-cdr! record value)
+        (set-cdr! table
+                  (cons (cons key value)
+                        (cdr table)))))
+  'ok)
+
+(define (make-table)
+  (list '*table*))
+
+(define tbl (make-table))
+
+(define (table? table)
+  (and (pair? table)
+       (eq? '*table* (car table))))
+
+(define (deep-lookup keys value)
+  (if (null? keys)
+      value
+      (let ((record (lookup (car keys) value)))
+        (display record)
+        (newline)
+        (if record
+            (deep-lookup (cdr keys) record)
+            #f))))
+
+(define (deep-insert! keys value table)
+  (define (deep-insert-helper! key keys table)
+    (let ((record (lookup key table)))
+      (cond ((not record)
+             (if (null? keys)
+                 (insert! key value table)
+                 (let ((new-table (make-table)))
+                   (insert! key new-table table)
+                   (deep-insert-helper! (car keys) (cdr keys) new-table))))
+            ((table? record)
+             (if (null? keys)
+                 (insert! key value record)
+                 (deep-insert-helper! (car keys) (cdr keys) record)))
+            (else (error "INSERT into a not table element")))))
+  (if (null? keys)
+        (error "INSERT cannot insert null keys")
+        (deep-insert-helper! (car keys) (cdr keys) table)))
+#+end_src
+
+* Exercise 3.26
+To search a table as implemented above, one needs to scan through the list of records.  This is basically the unordered list representation of 2.3.3.  For large tables, it may be more efficient to structure the table in a different manner.  Describe a table implementation where the (key, value) records are organized using a binary tree, assuming that keys can be ordered in some way (e.g., numerically or alphabetically).  (Compare Exercise 2.66 of Chapter 2.)
+
+** Solution
+One could just use the same binary tree representation of 2.3 using a key value pair as an entry of the tree.  For that we would need an comparator function, 2.3 used '=', that would receive two pairs and compare their keys.
+
+* Exercise 3.27
+Memoization (also called  tabulation) is a technique that enables a procedure to record, in a local table, values that have previously been computed.  This technique can make a vast difference in the performance of a program.  A memoized procedure maintains a table in which values of previous calls are stored using as keys the arguments that produced the values.  When the memoized procedure is asked to compute a value, it first checks the table to see if the value is already there and, if so, just returns that value.  Otherwise, it computes the new value in the ordinary way and stores this in the table.  As an example of memoization, recall from 1.2.2 the exponential process for computing Fibonacci numbers:
+
+#+begin_src scheme :eval never
+(define (fib n)
+  (cond ((= n 0) 0)
+        ((= n 1) 1)
+        (else (+ (fib (- n 1))
+                 (fib (- n 2))))))
+#+end_src
+
+The memoized version of the same procedure is
+
+#+begin_src scheme :eval never
+(define memo-fib
+  (memoize
+   (lambda (n)
+     (cond ((= n 0) 0)
+           ((= n 1) 1)
+           (else
+            (+ (memo-fib (- n 1))
+               (memo-fib (- n 2))))))))
+#+end_src
+
+where the memoizer is defined as
+
+#+begin_src scheme :eval never
+(define (memoize f)
+  (let ((table (make-table)))
+    (lambda (x)
+      (let ((previously-computed-result
+             (lookup x table)))
+        (or previously-computed-result
+            (let ((result (f x)))
+              (insert! x result table)
+              result))))))
+#+end_src
+
+Draw an environment diagram to analyze the computation of (memo-fib 3). Explain why memo-fib computes the $n^{th}$ Fibonacci number in a number of steps proportional to $n$.  Would the scheme still work if we had simply defined memo-fib to be (memoize fib)?
+
+** Solution
+Environment Diagram:
+
+[[file:annex/3_27.png]]
+
+Simply defining memo-fib to be (memoize fib) wouldn't get the expected result though, since it would memoize only the final result and not the partial results.
