--- a/section-3-3.org
+++ b/section-3-3.org
@@ -729,3 +729,147 @@ Environment Diagram:
 [[file:annex/3_27.png]]
 
 Simply defining memo-fib to be (memoize fib) wouldn't get the expected result though, since it would memoize only the final result and not the partial results.
+
+* Exercise 3.28
+Define an or-gate as a primitive function box.  Your or-gate constructor should be similar to and-gate.
+
+** Solution
+#+begin_src scheme
+(define (or-gate a1 a2 output)
+  (define (or-action-procedure)
+    (let ((new-value
+           (logical-or (get-signal a1)
+                        (get-signal a2))))
+      (after-delay
+       or-gate-delay
+       (lambda ()
+         (set-signal! output new-value)))))
+  (add-action! a1 or-action-procedure)
+  (add-action! a2 or-action-procedure)
+  'ok)
+#+end_src
+
+* Exercise 3.29
+Another way to construct an or-gate is as a compound digital logic device, built from and-gates and inverters.  Define a procedure or-gate that accomplishes this.  What is the delay time of the or-gate in terms of and-gate-delay and inverter-delay?
+
+** Solution
+#+begin_src scheme
+(define (or-gate a1 a2 output)
+  (let ((a1-inv (make-wire))
+        (a2-inv (make-wire))
+        (out-inv (make-wire)))
+    (inverter a1 a1-inv)
+    (inverter a2 a2-inv)
+    (and-gate a1-inv a2-inv out-inv)
+    (inverter out-inv output)
+    'ok))
+#+end_src
+
+The delay time of this gate is 2 * inverter-delay + and-delay.
+
+
+* Exercise 3.30
+Figure 3.27 shows a ripple-carry adder formed by stringing together n full-adders. This is the simplest form of parallel adder for adding two n-bit binary numbers.  The inputs $A_1, A_2, A_3, \cdots, A_n$ and  B_1, B_2, B_3, \cdots, B_n$ are the two binary numbers to be added (each $A_k$ and $B_k$ is a 0 or a 1).  The circuit generates $S_1, S_2, S_3, \cdots, S_n$, the $n$ bits of the sum, and $C$, the carry from the addition.  Write a procedure ripple-carry-adder that generates this circuit.  The procedure should take as arguments three lists of $n$ wires each - the $A_k$, the $B_k$, and the $S_k$ - and also another wire $C$.  The major drawback of the ripple-carry adder is the need to wait for the carry signals to propagate. What is the delay needed to obtain the complete output from an n-bit ripple-carry adder, expressed in terms of the delays for and-gates, or-gates, and inverters?
+
+** Solution
+#+begin_src scheme
+(define (ripple-carry-adder A B S c-out)
+  (define (adder-builder A B S c-out)
+    (if (not (null? A))
+        (let ((c-in (make-wire)))
+          (adder-builder (cdr A) (cdr B) (cdr S) c-in)
+          (full-adder (car A) (car B) c-in (car S) c-out))))
+  (adder-builder A B S c-out)
+  'ok)
+#+end_src
+
+Let $fa\mbox{-}s\mbox{-}delay$ be the delay to update the SUM wire of the $full\mbox{-}adder$ circuit and $fa\mbox{-}c\mbox{-}delay$ be the delay to update the $C_{out}$ same circuit.  Also, let $ha\mbox{-}s\mbox{-}delay$ be the delay to update S wire of the $half\mbox{-}adder$ circuit and $ha\mbox{-}c\mbox{-}delay$ the delay to update the C wire of the same circuit.  Since the computation of each $full\mbox{-}adder$ depends on the computation of the carry-on bit of the previous $full\mbox{-}adder$, the delay needed to get the complete output, for n > 1, is:
+
+\begin{equation*}
+rca\mbox{-}delay = max(fa\mbox{-}s\mbox{-}delay, fa\mbox{-}c\mbox{-}delay) + max((n-1)*fa\mbox{-}c\mbox{-}delay, fa\mbox{-}s\mbox{-}delay)
+\end{equation*}
+
+From the circuits is possible to derive the $full\mbox{-}adder$ delays in terms of $half\mbox{-}adder$ delays:
+
+\begin{equation*}
+fa\mbox{-}s\mbox{-}delay = 2*ha\mbox{-}s\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+fa\mbox{-}c\mbox{-}delay = max(ha\mbox{-}c\mbox{-}delay, ha\mbox{-}s\mbox{-}delay + ha\mbox{-}c\mbox{-}delay) + or\mbox{-}delay
+\end{equation*}
+
+Since $ha\mbox{-}c\mbox{-}delay < ha\mbox{-}s\mbox{-}delay + ha\mbox{-}c\mbox{-}delay$, then:
+
+\begin{equation*}
+fa\mbox{-}c\mbox{-}delay = ha\mbox{-}s\mbox{-}delay + ha\mbox{-}c\mbox{-}delay + or\mbox{-}delay
+\end{equation*}
+
+And the $half\mbox{-}adder$ delays:
+
+\begin{equation*}
+ha\mbox{-}s\mbox{-}delay = max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + and\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+ha\mbox{-}c\mbox{-}delay = and\mbox{-}delay
+\end{equation*}
+
+Now is possible to show that $fa\mbox{-}s\mbox{-}delay > fa\mbox{-}c\mbox{-}delay$:
+
+\begin{equation*}
+2*ha\mbox{-}s\mbox{-}delay > ha\mbox{-}s\mbox{-}delay + ha\mbox{-}c\mbox{-}delay + or\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+ha\mbox{-}s\mbox{-}delay > ha\mbox{-}c\mbox{-}delay + or\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + and\mbox{-}delay > and\mbox{-}delay + or\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) > or\mbox{-}delay
+\end{equation*}
+
+given $inverter\mbox{-}delay > 0$.
+
+Simplify $rca\mbox{-}delay$:
+
+\begin{equation*}
+rca\mbox{-}delay = fa\mbox{-}s\mbox{-}delay + max((n-1)*fa\mbox{-}c\mbox{-}delay, fa\mbox{-}s\mbox{-}delay)
+\end{equation*}
+
+After substitutions:
+
+\begin{equation*}
+fa\mbox{-}s\mbox{-}delay = 2*max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay
+\end{equation*}
+
+\begin{equation*}
+fa\mbox{-}c\mbox{-}delay = max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay + or\mbox{-}delay
+\end{equation*}
+
+\begin{align*}
+\begin{split}
+rca\mbox{-}delay & = 2*max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) \\
+                 & + 2*and\mbox{-}delay \\
+                 & + max((n-1)*(max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay + or\mbox{-}delay), \\
+                 & \qquad \qquad 2*max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay)
+\end{split}
+\end{align*}
+
+Assuming $(n-1)*fa\mbox{-}c\mbox{-}delay > fa\mbox{-}s\mbox{-}delay$:
+
+\begin{equation*}
+\begin{split}
+rca\mbox{-}delay & = 2*max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) \\
+                 & + 2*and\mbox{-}delay \\
+                 & + (n-1)(max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay + or\mbox{-}delay)
+\end{split}
+\end{equation*}
+
+\begin{equation*}
+rca\mbox{-}delay = (n+1)(max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2*and\mbox{-}delay) + (n-1)or\mbox{-}delay
+\end{equation*}
