--- a/section-1-2.org
+++ b/section-1-2.org
@@ -87,11 +87,13 @@ $2 = 65536
 $3 = 65536
 #+end_example
 
-$f(n) = 2n$
+\begin{align*}
+& f(n) = 2n \\
 
-$g(n) = 2^n$
+& g(n) = 2^n \\
 
-$h(n) = 2^{h(n-1)}$
+& h(n) = 2^{h(n-1)}
+\end{align*}
 
 * Exercise 1.11
 A function f is defined by the rule that $f(n)=n$ if $n<3$ and $f(n)=f(n-1)+2f(n-2)+3f(n-3)$ if $n \ge 3$. Write a procedure that computes f by means of a recursive process. Write a procedure that computes f by means of an iterative process.
@@ -176,105 +178,85 @@ Proposition:
 \[ Fib(n) = \frac{\varphi^n}{\sqrt{5}} - \frac{\psi^n}{\sqrt{5}} \]
 
 Demonstration:
-\[
-\frac{\varphi^n - \psi^n}{\sqrt{5}} =
+
+\begin{align*}
+\frac{\varphi^n - \psi^n}{\sqrt{5}} &=
 \frac{\varphi^{n-1} - \psi^{n-1}}{\sqrt{5}} +
-\frac{\varphi^{n-2} - \psi^{n-2}}{\sqrt{5}}
-\]
-\[
-\varphi^n - \psi^n =
-\varphi^{n-1} - \psi^{n-1} + \varphi^{n-2} - \psi^{n-2}
-\]
-\[
-\varphi^n - \psi^n =
+\frac{\varphi^{n-2} - \psi^{n-2}}{\sqrt{5}} \\
+
+\varphi^n - \psi^n &=
+\varphi^{n-1} - \psi^{n-1} + \varphi^{n-2} - \psi^{n-2} \\
+
+\varphi^n - \psi^n &=
 \frac{\varphi^n}{\varphi} - \frac{\psi^n}{\psi} +
-\frac{\varphi^n}{\varphi^2} - \frac{\psi^n}{\psi^2}
-\]
-\[
-\varphi^n - \psi^n =
+\frac{\varphi^n}{\varphi^2} - \frac{\psi^n}{\psi^2} \\
+
+\varphi^n - \psi^n &=
 \varphi^n \left(\frac{1}{\varphi} + \frac{1}{\varphi^2}\right) -
-\psi^n \left(\frac{1}{\psi} + \frac{1}{\psi^2}\right)
-\]
-\[
-\varphi^n - \psi^n =
+\psi^n \left(\frac{1}{\psi} + \frac{1}{\psi^2}\right) \\
+
+\varphi^n - \psi^n &=
 \varphi^n \left( \frac{\varphi + 1}{\varphi^2} \right) -
 \psi^n \left( \frac{\psi + 1}{\psi^2} \right)
-\]
+\end{align*}
 
 Since $\varphi^2 = \varphi + 1$:
-\[
-\varphi^2 = \varphi + 1
-\]
-\[
-\left(\frac{1+\sqrt{5}}{2}\right)^2 = \frac{1+\sqrt{5}}{2} + 1
-\]
-\[
-\frac{\left( 1+\sqrt{5} \right)^2}{4} = \frac{1+\sqrt{5}}{2} + 1
-\]
-\[
-\left( 1+\sqrt{5} \right)^2 = 4\left(\frac{1+\sqrt{5}}{2} + 1 \right)
-\]
-\[
-\left( 1+\sqrt{5} \right)^2 = 2 \left( 1+\sqrt{5} \right) + 4
-\]
-\[
-\left( 1+\sqrt{5} \right)^2 = 2 + 2\sqrt{5} + 4
-\]
-\[
-\left( 1+\sqrt{5} \right)^2 = 6 + 2\sqrt{5}
-\]
-\[
-1 + 2\sqrt{5} + 5 = 6 + 2\sqrt{5}
-\]
-\[
-6 + 2\sqrt{5} = 6 + 2\sqrt{5}
-\]
-\[
-3 + \sqrt{5} = 3 + \sqrt{5}
-\]
+\begin{align*}
+\varphi^2 &= \varphi + 1 \\
+
+\left(\frac{1+\sqrt{5}}{2}\right)^2 &= \frac{1+\sqrt{5}}{2} + 1 \\
+
+\frac{\left( 1+\sqrt{5} \right)^2}{4} &= \frac{1+\sqrt{5}}{2} + 1 \\
+
+\left( 1+\sqrt{5} \right)^2 &= 4\left(\frac{1+\sqrt{5}}{2} + 1 \right) \\
+
+\left( 1+\sqrt{5} \right)^2 &= 2 \left( 1+\sqrt{5} \right) + 4 \\
+
+\left( 1+\sqrt{5} \right)^2 &= 2 + 2\sqrt{5} + 4 \\
+
+\left( 1+\sqrt{5} \right)^2 &= 6 + 2\sqrt{5} \\
+
+1 + 2\sqrt{5} + 5 &= 6 + 2\sqrt{5} \\
+
+6 + 2\sqrt{5} &= 6 + 2\sqrt{5} \\
+
+3 + \sqrt{5} &= 3 + \sqrt{5}
+\end{align*}
 
 And $\psi^2 = \psi + 1$:
-\[
-\psi^2 = \psi + 1
-\]
-\[
-\left(\frac{1-\sqrt{5}}{2}\right)^2 = \frac{1-\sqrt{5}}{2} + 1
-\]
-\[
-\frac{\left( 1-\sqrt{5} \right)^2}{4} = \frac{1-\sqrt{5}}{2} + 1
-\]
-\[
-\left( 1-\sqrt{5} \right)^2 = 4\left(\frac{1-\sqrt{5}}{2} + 1 \right)
-\]
-\[
-\left( 1-\sqrt{5} \right)^2 = 2 \left( 1-\sqrt{5} \right) + 4
-\]
-\[
-\left( 1-\sqrt{5} \right)^2 = 2 - 2\sqrt{5} + 4
-\]
-\[
-\left( 1-\sqrt{5} \right)^2 = 6 - 2\sqrt{5}
-\]
-\[
-1 - 2\sqrt{5} + 5 = 6 - 2\sqrt{5}
-\]
-\[
-6 - 2\sqrt{5} = 6 - 2\sqrt{5}
-\]
-\[
-3 - \sqrt{5} = 3 - \sqrt{5}
-\]
+
+\begin{align*}
+\psi^2 &= \psi + 1 \\
+
+\left(\frac{1-\sqrt{5}}{2}\right)^2 &= \frac{1-\sqrt{5}}{2} + 1 \\
+
+\frac{\left( 1-\sqrt{5} \right)^2}{4} &= \frac{1-\sqrt{5}}{2} + 1 \\
+
+\left( 1-\sqrt{5} \right)^2 &= 4\left(\frac{1-\sqrt{5}}{2} + 1 \right) \\
+
+\left( 1-\sqrt{5} \right)^2 &= 2 \left( 1-\sqrt{5} \right) + 4 \\
+
+\left( 1-\sqrt{5} \right)^2 &= 2 - 2\sqrt{5} + 4 \\
+
+\left( 1-\sqrt{5} \right)^2 &= 6 - 2\sqrt{5} \\
+
+1 - 2\sqrt{5} + 5 &= 6 - 2\sqrt{5} \\
+
+6 - 2\sqrt{5} &= 6 - 2\sqrt{5} \\
+
+3 - \sqrt{5} &= 3 - \sqrt{5} \\
+\end{align*}
 
 The proposition is true. Substituting $Fib(n)$ in the original inequality:
-\[
+
+\begin{align*}
 \left| \frac{\varphi^n}{\sqrt{5}} -
 \frac{\psi^n}{\sqrt{5}}  -
 \frac{\varphi^n}{\sqrt{5}} \right|
-< \frac{1}{2}
-\]
-\[
-\left| - \frac{\psi^n}{\sqrt{5}} \right| < \frac{1}{2}
-\]
+&< \frac{1}{2} \\
+
+\left| - \frac{\psi^n}{\sqrt{5}} \right| &< \frac{1}{2}
+\end{align*}
 
 As $-1 < \psi < 0$, so $-1 < \psi^n < 1$ for any $n \in \mathbb{N} > 0$, and $\sqrt{5} > 2$, therefore $Fib(n)$ is the nearest integer to $\frac{\varphi^n}{\sqrt{5}}$.
 
@@ -308,16 +290,23 @@ to reduce the size of the argument of sin. (For purposes of this exercise an ang
 ** Solution
 The procedure p will be applied 5 times when (sine 12.15) is evaluated (See evaluation annex). As for the order of growth, this function is a linear recursion, so it means that the space required to compute has the same order of growth of the number of steps needed to finish. The procedure evolves by successively applying the transformation $a \leftarrow \frac{a}{3}$ until $a < 0.1$. This can be expressed as the product:
 
-\[ a\prod_{1}^{n} \frac{1}{3} < 0.1 \]
+\begin{align*}
+a\prod_{1}^{n} \frac{1}{3} &< 0.1 \\
 
-\[ 0.1 > \frac{a}{3^n} \]
+0.1 &> \frac{a}{3^n}
+\end{align*}
 
 Where n is the number of steps. Solving for n:
 
-\[ 0.1(3^n) > a \]
-\[ 3^n > \frac{a}{0.1} \]
-\[ \log_{3}{3^n} > \log_{3}{\left(\frac{a}{0.1}\right)} \]
-\[ n > \log_{3}{a} - \log_{3}{0.1} \]
+\begin{align*}
+0.1(3^n) &> a \\
+
+3^n &> \frac{a}{0.1} \\
+
+\log_{3}{3^n} &> \log_{3}{\left(\frac{a}{0.1}\right)} \\
+
+n &> \log_{3}{a} - \log_{3}{0.1} \\
+\end{align*}
 
 Applying 12.15 $\log_{3}{12.15} - \log_{3}{0.1} \approx 4.369$ where 5 is the smallest integer that solves the inequality.
 
