--- a/section-3-3.org
+++ b/section-3-3.org
@@ -785,9 +785,10 @@ Figure 3.27 shows a ripple-carry adder formed by stringing together n full-adder
 
 Let $fa\mbox{-}s\mbox{-}delay$ be the delay to update the SUM wire of the $full\mbox{-}adder$ circuit and $fa\mbox{-}c\mbox{-}delay$ be the delay to update the $C_{out}$ same circuit.  Also, let $ha\mbox{-}s\mbox{-}delay$ be the delay to update S wire of the $half\mbox{-}adder$ circuit and $ha\mbox{-}c\mbox{-}delay$ the delay to update the C wire of the same circuit.  Since the computation of each $full\mbox{-}adder$ depends on the computation of the carry-on bit of the previous $full\mbox{-}adder$, the delay needed to get the complete output, for n > 1, is:
 
-\begin{equation*}
-rca\mbox{-}delay = max(fa\mbox{-}s\mbox{-}delay, fa\mbox{-}c\mbox{-}delay) + max((n-1) fa\mbox{-}c\mbox{-}delay, fa\mbox{-}s\mbox{-}delay)
-\end{equation*}
+\begin{align*}
+rca\mbox{-}delay = & max(fa\mbox{-}s\mbox{-}delay, fa\mbox{-}c\mbox{-}delay) \\
+& + max((n-1) fa\mbox{-}c\mbox{-}delay, fa\mbox{-}s\mbox{-}delay)
+\end{align*}
 
 From the circuits is possible to derive the $full\mbox{-}adder$ delays in terms of $half\mbox{-}adder$ delays:
 
@@ -849,3 +850,162 @@ rca\mbox{-}delay =& 2 max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}de
 
 rca\mbox{-}delay =& (n+1)(max(and\mbox{-}delay, or\mbox{-}delay + inverter\mbox{-}delay) + 2and\mbox{-}delay) + (n-1)or\mbox{-}delay
 \end{align*}
+
+* Exercise 3.31
+The internal procedure accept-action-procedure! defined in make-wire specifies that when a new action procedure is added to a wire, the procedure is immediately run. Explain why this initialization is necessary.  In particular, trace through the half-adder example in the paragraphs above and say how the system’s response would differ if we had defined accept-action-procedure! as
+
+#+begin_src scheme :eval never
+(define (accept-action-procedure! proc)
+  (set! action-procedures
+        (cons proc action-procedures)))
+#+end_src
+
+** Solution
+Without the initialization the circuits would not produce correct outputs unless some input change occurred after the wiring.
+
+* TODO Exercise 3.32
+The procedures to be run during each time segment of the agenda are kept in a queue.  Thus, the procedures for each segment are called in the order in which they were added to the agenda (first in, first out).  Explain why this order must be used.  In particular, trace the behavior of an and-gate whose inputs change from 0, 1 to 1, 0 in the same segment and say how the behavior would differ if we stored a segment’s procedures in an ordinary list, adding and removing procedures only at the front (last in, first out).
+
+* Exercise 3.33
+Using primitive multiplier, adder, and constant constraints, define a procedure averager that takes three connectors a, b, and c as inputs and establishes the constraint that the value of c is the average of the values of a and b.
+
+** Solution
+#+begin_src scheme
+(define (averager a b c)
+  (let ((s (make-connector))
+        (u (make-connector)))
+    (adder a b s)
+    (multiplier s u c)
+    (constant 0.5 u)
+    'ok))
+#+end_src
+
+* Exercise 3.34
+Louis Reasoner wants to build a squarer, a constraint device with two terminals such that the value of connector b on the second terminal will always be the square of the value a on the first terminal.  He proposes the following simple device made from a multiplier:
+
+#+begin_src scheme :eval never
+(define (squarer a b) (multiplier a a b))
+#+end_src
+
+There is a serious flaw in this idea.  Explain.
+
+** Solution
+Squarer cannot calculate the square root of b, since the multiplier in which it is based needs two out of three values.  When we set b, is not enough to solve the two other outputs.
+
+
+* Exercise 3.35
+Ben Bitdiddle tells Louis that one way to avoid the trouble in Exercise 3.34 is to define a squarer as a new primitive constraint.  Fill in the missing portions in Ben’s outline for a procedure to implement such a constraint:
+
+#+begin_src scheme :eval never
+(define (squarer a b)
+  (define (process-new-value)
+    (if (has-value? b)
+        (if (< (get-value b) 0)
+            (error "square less than 0:
+                    SQUARER"
+                   (get-value b))
+            <alternative1>)
+        <alternative2>))
+  (define (process-forget-value) <body1>)
+  (define (me request) <body2>)
+  ⟨rest of definition⟩
+  me)
+#+end_src
+
+** Solution
+#+begin_src scheme
+(define (squarer a b)
+  (define (process-new-value)
+    (if (has-value? b)
+        (if (< (get-value b) 0)
+            (error "square less than 0:
+                    SQUARER"
+                   (get-value b))
+            (set-value! a
+                        (sqrt (get-value b))
+                        me))
+        (if (has-value? a)
+            (set-value! b
+                        (* (get-value a) (get-value a))
+                        me))))
+  (define (process-forget-value)
+    (forget-value! a me)
+    (forget-value! b me)
+    (process-new-value))
+  (define (me request)
+    (cond ((eq? request 'I-have-a-value)
+           (process-new-value))
+          ((eq? request 'I-lost-my-value)
+           (process-forget-value))
+          (else (error "Unknown request:
+                        SQUARER" request))))
+  (connect a me)
+  (connect b me)
+  me)
+#+end_src
+
+* TODO Exercise 3.36
+Suppose we evaluate the following sequence of expressions in the global environment:
+
+#+begin_src scheme :eval never
+(define a (make-connector))
+(define b (make-connector))
+(set-value! a 10 'user)
+#+end_src
+
+At some time during evaluation of the set-value!, the following expression from the connector’s local procedure is evaluated:
+
+#+begin_src scheme :eval never
+(for-each-except
+  setter inform-about-value constraints)
+#+end_src
+
+Draw an environment diagram showing the environment in which the above expression is evaluated.
+
+
+* Exercise 3.37:
+The celsius-fahrenheit-converter procedure is cumbersome when compared with a more expression-oriented style of definition, such as
+
+#+begin_src scheme :eval never
+(define (celsius-fahrenheit-converter x)
+  (c+ (c* (c/ (cv 9) (cv 5))
+          x)
+      (cv 32)))
+
+(define C (make-connector))
+(define F (celsius-fahrenheit-converter C))
+#+end_src
+
+Here c+, c*, etc. are the “constraint” versions of the arithmetic operations.  For example, c+ takes two connectors as arguments and returns a connector that is related to these by an adder constraint:
+
+#+begin_src scheme :eval never
+(define (c+ x y)
+  (let ((z (make-connector)))
+    (adder x y z)
+    z))
+#+end_src
+
+Define analogous procedures c-, c*, c/, and cv (constant value) that enable us to define compound constraints as in the converter example above.
+
+** Solution
+#+begin_src scheme
+(define (c- x y)
+  (let ((z (make-connector)))
+    (adder z y x)
+    z))
+
+(define (c* x y)
+  (let ((z (make-connector)))
+    (multiplier x y z)
+    z))
+
+(define (c/ x y)
+  (let ((z (make-connector)))
+    (multiplier z y x)
+    z))
+
+(define (cv c)
+  (let ((z (make-connector)))
+    (constant c z)
+    z))
+#+end_src
