--- a/section-3-5.org
+++ b/section-3-5.org
@@ -147,7 +147,7 @@ Define a procedure partial-sums that takes as argument a stream $S$ and returns 
    (add-streams (stream-cdr s) (partial-sums s))))
 
 (test-equal
-    '(1 3 6 10 15)
+  '(1 3 6 10 15)
   (stream-take 5 (partial-sums integers)))
 #+end_src
 
@@ -517,7 +517,7 @@ Write a procedure triples that takes three infinite streams, $S$, $T$, and $U$, 
    (triplets integers integers integers)))
 
 (test-equal
-    '((3 4 5) (6 8 10) (5 12 13) (9 12 15) (8 15 17))
+  '((3 4 5) (6 8 10) (5 12 13) (9 12 15) (8 15 17))
   (stream-take 5 pythagorean-triplets))
 #+end_src
 
@@ -570,7 +570,7 @@ It would be nice to be able to generate streams in which the pairs appear in som
 
 ;; 1.
 (test-equal
-    '((1 1) (1 2) (1 3) (2 2) (1 4) (2 3))
+  '((1 1) (1 2) (1 3) (2 2) (1 4) (2 3))
   (stream-take
    6
    (integer-pairs-weighted-by
@@ -579,7 +579,7 @@ It would be nice to be able to generate streams in which the pairs appear in som
 
 ;; 2. quick and dirty approach
 (test-equal
-    '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
+  '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
   (stream-take
    10
    (stream-filter
@@ -624,6 +624,71 @@ It would be nice to be able to generate streams in which the pairs appear in som
          (partial divides-none 5))))
 
 (test-equal
-    '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
+  '((1 1) (1 7) (1 11) (1 13) (1 17) (1 19) (1 23) (1 29) (1 31) (7 7))
   (stream-take 10 specified-stream))
+#+end_src
+
+* Exercise 3.71
+Numbers that can be expressed as the sum of two cubes in more than one way are sometimes called Ramanujan numbers, in honor of the mathematician Srinivasa Ramanujan. Ordered streams of pairs provide an elegant solution to the problem of computing these numbers.  To find a number that can be written as the sum of two cubes in two different ways, we need only generate the stream of pairs of integers $(i, j)$ weighted according to the sum $i^3 + j^3$ (see Exercise 3.70), then search the stream for two consecutive pairs with the same weight.  Write a procedure to generate the Ramanujan numbers.  The first such number is 1,729.  What are the next five?
+
+** Solution
+#+begin_src scheme
+;; from 3.70
+(define (merge-weighted w s1 s2)
+  (cond ((stream-null? s1) s2)
+        ((stream-null? s2) s1)
+        (else
+         (let ((s1car (stream-car s1))
+               (s2car (stream-car s2)))
+           (cond ((<= (w s1car) (w s2car))
+                  (cons-stream
+                   s1car
+                   (merge-weighted
+                    w
+                    (stream-cdr s1)
+                    s2)))
+                 ((> (w s1car) (w s2car))
+                  (cons-stream
+                   s2car
+                   (merge-weighted
+                    w
+                    s1
+                    (stream-cdr s2)))))))))
+
+(define (weighted-pairs w s t)
+  (cons-stream
+   (list (stream-car s) (stream-car t))
+   (merge-weighted
+    w
+    (stream-map
+     (lambda (x) (list (stream-car s) x))
+     (stream-cdr t))
+    (weighted-pairs
+     w
+     (stream-cdr s)
+     (stream-cdr t)))))
+
+;; actual solution
+(define (sum-of-cubes arglist)
+  (apply + (map cube arglist)))
+
+(define (ramanujan-numbers)
+  (let ((sum-of-cubes-stream
+         (stream-map
+          sum-of-cubes
+          (weighted-pairs sum-of-cubes integers integers))))
+  (stream-map
+   (lambda (consecutive-sums) (car consecutive-sums))
+   (stream-filter
+    (lambda (consecutive-sums)
+      (= (car consecutive-sums)
+         (cdr consecutive-sums)))
+    (stream-map
+     (lambda (current next) (cons current next))
+     sum-of-cubes-stream
+     (stream-cdr sum-of-cubes-stream))))))
+
+(test-equal
+  '(1729 4104 13832 20683 32832 39312)
+  (stream-take 6 (ramanujan-numbers)))
 #+end_src
